review comments, fixed toggle collapse bug

--- a/org_chart/css/style.css
+++ b/org_chart/css/style.css
@@ -51,11 +51,11 @@ line.link2 {
 
 .org, .dept, .name, .prospect {
     width:70px;
-    height:40px;
+    height:30px;
     float: left;
     margin: 5px 5px 0px;
     font-size: 12px;
-    line-height: 35px;
+    line-height: 28px;
     padding: 5px;
     text-align: center;
 }
@@ -65,17 +65,19 @@ line.link2 {
 }
 
 .legend .dept {
-    background-color: #3182bd;
+    background-color: #4CA1DE;
+    color:white;
 }
 
 .legend .name {
-    background-color: #BADD82;
+    background-color: #fff;
+    border: 1px solid #123;
 }
 
 .force_layout {
     float:left;
     width: 960px;
-    height: 560px;
+    height: 600px;
     border:  1px solid #3182bd;
 }
 
